Added links, changed text
Added the links to GitHub
Changed some descriptions

--- a/src/app/contact/contact-page/contact-page.component.html
+++ b/src/app/contact/contact-page/contact-page.component.html
@@ -57,7 +57,7 @@
     <h2>{{ 'contact.social-cta' | translate }}</h2>
     <ul>
       <li><a href="https://www.linkedin.com/in/jemarhe/" target="_blank"><img src="../../../assets/icons/linkedin_logo.svg" alt="My Linkedin"></a></li>
-      <li><a href="" target="_blank"><img src="../../../assets/icons/github_logo.svg" alt="My Github"></a></li>
+      <li><a href="http://github.jemarhe.com/" target="_blank"><img src="../../../assets/icons/github_logo.svg" alt="My Github"></a></li>
     </ul>
   </div>
 </div>
