--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -15,16 +15,20 @@ header {
   display: flex;
   justify-content: space-between;
   padding: 1.5em var(--side-padding);
+  position: relative;
 
   nav {
-    display: none;
+    display: block;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(30%);
     z-index: 999;
     width: 66%;
     right: 0;
     top: 0;
     height: 100vh;
     padding: 1em;
-    position: absolute;
+    position: fixed;
     
     background: #3f4246;
 
@@ -108,6 +112,9 @@ a:active, #lang-button:active, a img:active {
 
     nav {
       display: flex;
+      opacity: 1;
+      pointer-events: unset;
+      transform: none;
       width: unset;
       right: unset;
       top: unset;
