Changed Github URL

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -20,7 +20,7 @@
         
         <ul>
           <li><a href="https://www.linkedin.com/in/jemarhe/" target="_blank"><img src="../../../assets/icons/linkedin_logo.svg" alt="Linkedin"></a></li>
-          <li><a href="http://github.jemarhe.com/" target="_blank"><img src="../../../assets/icons/github_logo.svg" alt="Github"></a></li>
+          <li><a href="https://github.com/helio4" target="_blank"><img src="../../../assets/icons/github_logo.svg" alt="Github"></a></li>
         </ul>
       </div>
     </nav>
