--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -2,8 +2,8 @@
 <app-skills-section></app-skills-section>
 <div class="projects-container">
   <app-project id="my-work" [projectName]="'worki'" [isFeatured]="true" [projectUrl]="'https://riunet.upv.es/handle/10251/128437'"></app-project>
-  <app-project [projectName]="'employee-manager'" [isFlipped]="true" [projectUrl]="'http://github.jemarhe.com/employee-manager-frontend'"></app-project>
-  <app-project [projectName]="'jemarhe'" [projectUrl]="'http://github.jemarhe.com/my-web-portfolio'"></app-project>
+  <app-project [projectName]="'employee-manager'" [isFlipped]="true" [projectUrl]="'https://github.com/helio4/employee-manager-frontend'"></app-project>
+  <app-project [projectName]="'jemarhe'" [projectUrl]="'https://github.com/helio4/my-web-portfolio'"></app-project>
   <div @fadeInDownCascade class="cta-container">
     <h1 class="title cascade" >{{ 'projects.cta-title' | translate }}</h1>
     <a routerLink="/contact" class="button cascade">{{ 'projects.cta-button' | translate }}</a>
