--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -8,7 +8,6 @@ a {
   a {
     color: white;
   }
-
 }
 
 header {
@@ -29,7 +28,7 @@ header {
     height: 100vh;
     padding: 1em;
     position: fixed;
-    
+
     background: #3f4246;
 
     .navbar {
@@ -40,8 +39,7 @@ header {
         font-size: 1.2em;
         padding: 0.7em 1em;
       }
-
-    } 
+    }
 
     .social-header {
       margin: 1em 1em;
@@ -73,7 +71,6 @@ header {
   nav.is-active {
     display: block;
   }
-
 }
 
 .logo {
@@ -96,17 +93,19 @@ header {
   cursor: pointer;
 }
 
-a:active, #lang-button:active, a img:active {
-  opacity: .6;
+a:active,
+#lang-button:active,
+a img:active {
+  opacity: 0.6;
 }
 
 @media only screen and (min-width: 800px) {
-  
-  #burger, #exit-menu {
+  #burger,
+  #exit-menu {
     display: none;
   }
 
-  header  {
+  header {
     display: flex;
     justify-content: unset;
 
@@ -121,7 +120,7 @@ a:active, #lang-button:active, a img:active {
       height: unset;
       padding: unset;
       position: unset;
-      
+
       background: unset;
       justify-content: space-between;
       margin: auto 0;
@@ -134,13 +133,12 @@ a:active, #lang-button:active, a img:active {
         display: flex;
         left: unset;
         a {
-          float: left; 
+          float: left;
           font-size: 1.2em;
           padding: 0;
           margin-left: 2em;
         }
-
-      } 
+      }
 
       .social-header {
         margin: auto 0;
@@ -165,7 +163,7 @@ a:active, #lang-button:active, a img:active {
         ul {
           display: flex;
           float: right;
-          
+
           li {
             margin-right: unset;
             margin-left: 1.2em;
@@ -191,5 +189,4 @@ a:active, #lang-button:active, a img:active {
       display: unset;
     }
   }
-
 }
