--- a/src/app/home/components/skills-section/skills-section.component.html
+++ b/src/app/home/components/skills-section/skills-section.component.html
@@ -1,32 +1,42 @@
-
 <div @fadeInDownCascade id="my-skills" class="skills-container">
-  <img class="skill-icon" src="../../../../assets/icons/skill_icon.png" alt="Skill icon">
-  <h1 class="cascade">{{ 'skills.title' | translate }}</h1>
+  <img
+    class="skill-icon"
+    src="../../../../assets/icons/skill_icon.png"
+    alt="Skill icon"
+  />
+  <h1 class="cascade">{{ "skills.title" | translate }}</h1>
   <ul>
-
     <li class="cascade">
       <div class="icon-container one">
-        <img src="../../../../assets/icons/typescript_logo.svg" alt="Typescript logo">
+        <img
+          src="../../../../assets/icons/typescript_logo.svg"
+          alt="Typescript logo"
+        />
       </div>
-      <p class="skill-title">{{ 'skills.ts.title' | translate }}</p>
-      <p class="skill-content">{{ 'skills.ts.content' | translate }}</p>
+      <p class="skill-title">{{ "skills.ts.title" | translate }}</p>
+      <p class="skill-content">{{ "skills.ts.content" | translate }}</p>
     </li>
 
     <li class="cascade">
       <div class="icon-container two">
-        <img src="../../../../assets/icons/angular_logo.svg" alt="Typescript logo">
+        <img
+          src="../../../../assets/icons/angular_logo.svg"
+          alt="Typescript logo"
+        />
       </div>
-      <p class="skill-title">{{ 'skills.angular.title' | translate }}</p>
-      <p class="skill-content">{{ 'skills.angular.content' | translate }}</p>
+      <p class="skill-title">{{ "skills.angular.title" | translate }}</p>
+      <p class="skill-content">{{ "skills.angular.content" | translate }}</p>
     </li>
 
     <li class="cascade">
       <div class="icon-container three">
-        <img src="../../../../assets/icons/html_logo.svg" alt="Typescript logo">
+        <img
+          src="../../../../assets/icons/html_logo.svg"
+          alt="Typescript logo"
+        />
       </div>
-      <p class="skill-title">{{ 'skills.html.title' | translate }}</p>
-      <p class="skill-content">{{ 'skills.html.content' | translate }}</p>
+      <p class="skill-title">{{ "skills.html.title" | translate }}</p>
+      <p class="skill-content">{{ "skills.html.content" | translate }}</p>
     </li>
-
   </ul>
 </div>
