--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,5 +1,4 @@
 <div class="footer-container">
-  <app-header [hideSocialHeader]="true" ></app-header>
-  <img src="../../../../assets/images/abstract_cpu.svg" alt="Abstract CPU">
+  <app-header [hideSocialHeader]="true"></app-header>
+  <img src="../../../../assets/images/abstract_cpu.svg" alt="Abstract CPU" />
 </div>
-
