--- a/src/app/home/components/hero-section/hero-section.component.scss
+++ b/src/app/home/components/hero-section/hero-section.component.scss
@@ -3,21 +3,21 @@
 }
 
 .hero {
-  background: linear-gradient(114.47deg, #213C4D 17.91%, #2B495C 89.01%);
+  background: linear-gradient(114.47deg, #213c4d 17.91%, #2b495c 89.01%);
   position: relative;
   z-index: 0;
   padding: 10vh var(--side-padding);
   overflow: hidden;
 
   h3 {
-    color: #F4F4F4;
+    color: #f4f4f4;
     font-weight: normal;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     font-size: 1.7em;
     margin: 0;
   }
-  
+
   h1 {
     margin-top: 0.4em;
     font-size: 3.8em;
@@ -32,7 +32,7 @@
     line-height: 1.3em;
     margin-bottom: 1.3em;
   }
-  
+
   .scroll-cta {
     display: flex;
     padding: 0 2em;
@@ -40,27 +40,27 @@
     svg {
       width: 3em;
       transform: translateY(5%);
-      
+
       &.left {
         margin: auto 0 auto auto;
       }
-      
+
       &.right {
         margin: auto auto auto 0;
       }
-      
     }
 
     p {
       margin: 0 2vh;
       font-size: 1.6em;
     }
-
   }
-
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
   text-align: center;
 }
 
@@ -84,43 +84,57 @@ svg {
     float: right;
   }
 
-  #L1L, #L1U, #S1L, #S1U {
+  #L1L,
+  #L1U,
+  #S1L,
+  #S1U {
     transform-origin: 31% 31%;
   }
 
-  #L1R, #L1D, #S1R, #S1D {
+  #L1R,
+  #L1D,
+  #S1R,
+  #S1D {
     transform-origin: 69% 69%;
   }
 
-  #L2L, #L2U {
+  #L2L,
+  #L2U {
     transform-origin: 42% 15%;
   }
 
-  #L2L_1_, #L2U_1_ {
+  #L2L_1_,
+  #L2U_1_ {
     transform-origin: 15% 42%;
   }
 
-  #L2R, #L2D {
+  #L2R,
+  #L2D {
     transform-origin: 58% 85%;
   }
 
-  #L2R_1_, #L2D_1_ {
+  #L2R_1_,
+  #L2D_1_ {
     transform-origin: 85% 58%;
   }
 
-  #S2L, #S2D {
+  #S2L,
+  #S2D {
     transform-origin: 43% 82%;
   }
 
-  #S2L_1_, #S2D_1_ {
+  #S2L_1_,
+  #S2D_1_ {
     transform-origin: 18% 59%;
   }
 
-  #S2R, #S2U {
+  #S2R,
+  #S2U {
     transform-origin: 57% 18%;
   }
 
-  #S2R_1_, #S2U_1_ {
+  #S2R_1_,
+  #S2U_1_ {
     transform-origin: 82% 41%;
   }
 
@@ -164,7 +178,6 @@ svg {
 }
 
 @media only screen and (min-width: 1050px) {
-
   .hero {
     min-height: 90vh;
   }
@@ -176,40 +189,40 @@ svg {
     padding-top: 0;
     padding-bottom: 0;
     grid-gap: 3em;
-  
+
     .content {
       margin: auto 0;
     }
-    
+
     h1 {
       margin-top: 0.3em;
       margin-bottom: 0.3em;
     }
-  
+
     h2 {
       margin-bottom: 1.7em;
     }
-    
+
     .scroll-cta {
       padding: 0 0;
 
       svg {
         width: 2em;
-        
+
         &.left {
           margin: auto 0 auto 0;
         }
-        
       }
-  
     }
-  
   }
-  
-  h1, h2, h3, p {
+
+  h1,
+  h2,
+  h3,
+  p {
     text-align: left;
   }
-  
+
   .hero-design {
     fill: transparent;
     position: unset;
@@ -217,5 +230,4 @@ svg {
     height: unset;
     opacity: 1;
   }
-
 }
